tests/NormalTests/paczka1/fuzzy1/71413348.err
Error in line 2: S230 A831 96,4
Error in line 4: V67WugjAYy A953 9{,9
Error in line 1: 8o2 A808 72,9
Error in line 7: 8o2 A953 37,6
Error in line 13: V67WugjAYy A953 69,3
Error in line 11: LNUo A808 97,6
Error in line 21: S230 A953 56,85
Error in line 20: S230 A953 79,9
Error in line 18: V67WugjAYy S230 0,8
Error in line 29: yEbeU A831 1,2
